objects/smlfcom__SML_Forecast_Detail_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>smlfcom__Chart_Type__c</fullName>
        <label>Chart Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly_Summary</fullName>
                    <default>true</default>
                    <label>Quarterly_Summary</label>
                </value>
                <value>
                    <fullName>Forecast_Details</fullName>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
                <value>
                    <fullName>Extrapolation_Whatif</fullName>
                </value>
                <value>
                    <fullName>Pipe_Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dependant_on_Field__c</fullName>
        <label>Dependant on Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dimension1__c</fullName>
                    <default>true</default>
                    <label>Dimension1__c</label>
                </value>
                <value>
                    <fullName>Dimension2__c</fullName>
                </value>
                <value>
                    <fullName>Dimension3__c</fullName>
                </value>
                <value>
                    <fullName>Dimension5__c</fullName>
                </value>
                <value>
                    <fullName>Dimension6__c</fullName>
                </value>
                <value>
                    <fullName>Dimension7__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension_Label__c</fullName>
        <label>Dimension Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension_Ordering__c</fullName>
        <label>Dimension Ordering</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Filter_Fields__c</fullName>
        <label>Filter Fields</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dimension1__c</fullName>
                    <default>true</default>
                    <label>Dimension1__c</label>
                </value>
                <value>
                    <fullName>Dimension2__c</fullName>
                </value>
                <value>
                    <fullName>Dimension3__c</fullName>
                </value>
                <value>
                    <fullName>Dimension5__c</fullName>
                </value>
                <value>
                    <fullName>Dimension6__c</fullName>
                </value>
                <value>
                    <fullName>Dimension7__c</fullName>
                </value>
                <value>
                    <fullName>Record_Name__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Is_Linked_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Linked Field?</label>
        <type>Checkbox</type>
    </fields>
    <label>SML Forecast Detail Field</label>
    <pluralLabel>SML Forecast Detail Fields</pluralLabel>
</CustomObject>